--- a/docs/知识体系/专业技能/硬实力/网络/进程、线程、协程.md
+++ b/docs/知识体系/专业技能/硬实力/网络/进程、线程、协程.md
@@ -31,11 +31,11 @@
 
 process : thread : task
 
-    - 1:1:1 -> 单进程，单线程，单任务。例如阻塞型echo server
+    - 1:1:1 -> 单进程，单线程，单任务。例如阻塞型echo server Redis网络模型
     - N:1:N -> 多进程，单线程，多任务。进程池
     - 1:N:N -> 单进程，多线程，多任务。线程池
     - 1:1:N -> 单进程，单线程，多任务。Python中的协程实现
-    - 1:M:N -> 单进程，多线程，多任务。Golang的GMP模型
+    - 1:M:N -> 单进程，多线程，多任务。Golang的GMP模型 Memcached
     - M:N:Z -> 多进程，多线程，多任务。Nginx的多worker，每个worker多线程，每个线程+epoll处理多请求
     - ...
 
